fix: img  alignment

--- a/src/styles/case-studies.css
+++ b/src/styles/case-studies.css
@@ -18,8 +18,19 @@
 }
 
 /*Images*/
+
+figure{
+  display: grid;
+}
+
+figcaption {
+  width: auto;
+  font-size: 12px;
+  margin-top: 4px;
+}
+
 .case-study-img {
-  max-width: 500px;
+  border-radius: 8px;
   width: 100%;
   object-fit: cover;
 }
