--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -140,10 +140,6 @@ a:hover {
   text-decoration: underline;
 }
 
-figcaption{
-  font-size: 12px;
-  margin-top: 4px;
-}
 
 /*NAVBAR*/
 
